# tasker-copilot

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  PRODUCT_SPEC.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: routes.py
apps/api/app/core/: auth.py  config.py
apps/api/app/models/: db_models.py  schemas.py
apps/api/app/services/: llm.py  proposal.py  scoring.py
apps/api/app/storage/: db.py
apps/api/tests/: test_proposal.py  test_scoring.py
apps/extension/: eslint.config.js  manifest.json  package-lock.json  package.json  tsconfig.json
apps/extension/src/background/: index.ts
apps/extension/src/content/: index.ts  taskerAdapter.test.ts
apps/extension/src/popup/: index.ts  popup.html
apps/extension/src/shared/: apiClient.ts  taskerAdapter.ts
docs/: RELEASE_NAS_CHECKLIST.md  vertical-slice.md
